# rust-developer-tool-web

./: .gitignore  2-2-0.md  CHANGELOG.md  Cargo.toml  README.md  package.json
.github/workflows/: release.yml
src/: app.rs  error.rs  lib.rs  logs.rs  main.rs  process.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  events.rs  main.rs  process.rs  process_manager.rs  state.rs
ui/: index.html  package.json  pnpm-lock.yaml
ui/src/: App.tsx
ui/src/components/: ConfigModal.tsx  Controls.tsx  FilterBar.tsx  ProjectTabs.tsx  ProjectView.tsx  SearchBar.tsx  ServiceControls.tsx  Terminal.tsx  WelcomeScreen.tsx
ui/src/hooks/: useConfig.ts  useLogStream.ts  useProcessControl.ts
ui/src/styles/: app.css
ui/src/types/: events.ts
